@@ -1,3 +1,7 @@
+2023-08-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* luajiterr.test: Make easier to test on Windows.
+
 2019-03-26  Karl Berry  <karl@freefriends.org>
 
 	* configure.ac (LIBLUAJIT_LDEXTRA): -lc++abi -lpthread for
