@@ -1,3 +1,7 @@
+2023-08-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* luaerror.test: Make easier to test on Windows.
+
 2020-10-04 Luigi Scarso <luigi.scarso@gmail.com>
 	
 	* Adapted for Lua 5.3.6 (thanks to K.Berry and A.Kakuto)
